# sm-pipes

./: .gitmodules  CMakeLists.txt  SMPipesConfig.h.in
client-app/: CMakeLists.txt  client-app.cpp  client-app.rc  commands.json  resource.h
extensions/: CMakeLists.txt
extensions/babel-package/: CMakeLists.txt  babel-preset-Debug.js  babel-preset-MinSizeRel.js  babel-preset-RelWithDebInfo.js  babel-preset-Release.js  babel-preset-google-chrome.js  babel-preset-mozilla.js  package.json
extensions/extension/: CMakeLists.txt  background.js  content-script.js  manifest-mozilla.json
extensions/extension/google-chrome/: CMakeLists.txt  manifest.json
extensions/extension/mozilla/: CMakeLists.txt  manifest.json
extensions/google-chrome/: CMakeLists.txt  background.js  content-script.js  manifest.json
extensions/google-chrome/icons/: LICENSE.txt
extensions/mozilla/: CMakeLists.txt  background.js  content-script.js  manifest.json
include/: CMakeLists.txt  atl-headers.h  chunked-buffer.hpp  critical-section.hpp  hres-routines.hpp  msg-process.hpp  named-pipe-client.hpp  named-pipe-defaults.hpp  named-pipe-server.hpp  named-pipe.hpp  pipe-client-basics.hpp  pipe-server-basics.hpp  rapidjson-headers.hpp  security-policy.hpp  security-routines.hpp  sm-pipe-name-routines.hpp  sm-srv.h  targetver.h  worker-thread.hpp
miko-extensions/Chrome/: background.js  manifest.json
miko-extensions/Firefox/: background.js  manifest.json
native-msg-proxy/: CMakeLists.txt  native-msg-proxy-google.json  native-msg-proxy-mozilla.json  native-msg-proxy.cpp  native-msg-proxy.rc  native-proxy-mozilla.json  native-proxy.cpp  native-proxy.rc  printf.hpp  registry.cpp  registry.h  resource.h
native-msg-proxy/app/: main.js  manifest.json
native-proxy/: CMakeLists.txt  native-proxy.cpp  native-proxy.json  native-proxy.rc  registry.cpp  registry.h  resource.h
native-proxy/utils/: install-host.bat  org.kiszka.echo.json  uninstall-host.bat
server-app/: CMakeLists.txt  server-app.cpp
server-echo-app/: CMakeLists.txt  server-echo-app.cpp
server-mbdd/: CMakeLists.txt  resource.h  server-mbdd.cpp  server-mbdd.def  server-mbdd.rc  str-encode.cpp
server-mbdd/au3/: server-mbdd.au3
