#
# SMClientApp
#

file(GLOB PROJECT_PUBLIC_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../include/*.hpp")
SOURCE_GROUP("Public Header Files" FILES ${PROJECT_PUBLIC_HEADER_FILES})

ADD_EXECUTABLE(SMClientApp client-app.cpp ${PROJECT_PUBLIC_HEADER_FILES})

SET_PROPERTY(TARGET SMClientApp PROPERTY CXX_STANDARD 14)

INSTALL(TARGETS SMClientApp DESTINATION bin)