#
# SMServerApp
#

file(GLOB PROJECT_PUBLIC_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../include/*.hpp")
SOURCE_GROUP("Public Header Files" FILES ${PROJECT_PUBLIC_HEADER_FILES})

ADD_EXECUTABLE(SMServerApp server-app.cpp ${PROJECT_PUBLIC_HEADER_FILES})
SET_PROPERTY(TARGET SMServerApp PROPERTY CXX_STANDARD 14)

INSTALL(TARGETS SMServerApp DESTINATION bin)