#
# SMServerApp
#

file(GLOB PROJECT_PUBLIC_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../include/*.hpp")
SOURCE_GROUP("Public Header Files" FILES ${PROJECT_PUBLIC_HEADER_FILES})

ADD_EXECUTABLE(
	SMServerApp
	server-app.cpp
	${PROJECT_PUBLIC_HEADER_FILES}
)

ADD_DEPENDENCIES(SMServerApp RapidJSON)
TARGET_LINK_LIBRARIES(SMServerApp PRIVATE RapidJSON)

SET_TARGET_PROPERTIES(SMServerApp
   PROPERTIES
   CXX_STANDARD 14
   FOLDER "Server"
)

INSTALL(TARGETS SMServerApp DESTINATION bin)
