#
# SMEchoServerApp
#

file(GLOB PROJECT_PUBLIC_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../include/*.hpp")
SOURCE_GROUP("Public Header Files" FILES ${PROJECT_PUBLIC_HEADER_FILES})

ADD_EXECUTABLE(
	SMEchoServerApp
	server-echo-app.cpp
	${PROJECT_PUBLIC_HEADER_FILES}
)

ADD_DEPENDENCIES(SMEchoServerApp RapidJSON)
TARGET_LINK_LIBRARIES(SMEchoServerApp PRIVATE RapidJSON)

SET_TARGET_PROPERTIES(SMEchoServerApp
   PROPERTIES
   CXX_STANDARD 14
   FOLDER "Server"
)

INSTALL(TARGETS SMEchoServerApp DESTINATION bin)
