#
# SMServerMbdd
#

file(GLOB PROJECT_PUBLIC_HEADER_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../include/*.hpp")
file(GLOB PROJECT_PUBLIC_API_FILES "${CMAKE_CURRENT_SOURCE_DIR}/../include/sm-srv.h")

SOURCE_GROUP("Public Header Files" FILES ${PROJECT_PUBLIC_HEADER_FILES})
SOURCE_GROUP("API" FILES ${PROJECT_PUBLIC_API_FILES} server-mbdd.def)

SOURCE_GROUP("AutoIt" FILES au3/server-mbdd.au3)
SET_SOURCE_FILES_PROPERTIES(au3/server-mbdd.au3 PROPERTIES HEADER_FILE_ONLY TRUE)

ADD_LIBRARY(SMServerMbdd SHARED
	server-mbdd.cpp
	server-mbdd.rc resource.h
	server-mbdd.def
	${PROJECT_PUBLIC_HEADER_FILES}
	${PROJECT_PUBLIC_API_FILES}
	au3/server-mbdd.au3
)

ADD_DEPENDENCIES(SMServerMbdd RapidJSON)
TARGET_LINK_LIBRARIES(SMServerMbdd PRIVATE RapidJSON)

SET_TARGET_PROPERTIES(SMServerMbdd
   PROPERTIES
   CXX_STANDARD 14
   FOLDER "Server"
)

INSTALL(TARGETS SMServerMbdd DESTINATION bin)
INSTALL(FILES au3/server-mbdd.au3 DESTINATION bin RENAME SMServerMbddHost.au3)
